--- a/.github/workflows/main_gc2025.yml
+++ b/.github/workflows/main_gc2025.yml
@@ -26,14 +26,14 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
+          npm run build
           npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +62,5 @@ jobs:
           app-name: 'gc2025'
           slot-name: 'Production'
           package: .
+
           
